# juhan-rtech

./: .gitmodules  README.md
install/: .rosinstall  _setup_util.py  setup.sh
install/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
install/lib/pkgconfig/: beginner_tutorials.pc
install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
mymap/: my_gazebo_map.pgm  my_gazebo_map.yaml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/bagfiles/: 2017-09-14-14-38-54.bag
src/beginner_tutorials/launch/: turtlemimic.launch
src/dual_manipulator2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_manipulator2_moveit_config/config/: dual_manipulators.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
src/dual_manipulator2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/dual_manipulator_moveit_config/: .setup_assistant  package.xml
src/dual_manipulator_moveit_config/config/: dual_manipulators.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
src/dual_manipulator_moveit_config/launch/: move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/dual_manipulator_support/: CMakeLists.txt  package.xml
src/dual_manipulator_support/urdf/: dual_manipulators.xacro  dual_manipulators_sia5_ur5.xacro
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/motoman_sia5d_moveit_config/config/: motoman_sia5d.srdf
src/motoman_sia5d_moveit_config/launch/: moveit.rviz
src/mouse_reader/: CMakeLists.txt  package.xml
src/mouse_reader/include/mouse_reader/: mouse_reader.h
src/mouse_reader/msg/: MouseMotion.msg  mouse_event_msg.msg  mouse_vel.msg
src/mouse_reader/src/: mouse_event_publisher.cpp  mouse_reader.cpp
src/move_husky/: CMakeLists.txt  package.xml
src/move_husky/docs/: exam_task2_explanation_raedov.odt
src/move_husky/launch/: move_husky.launch
src/move_husky/src/: move_husky.cpp
src/my_r2d2/: CMakeLists.txt  package.xml
src/my_r2d2/config/: r2d2.rviz
src/my_r2d2/launch/: ar_tracker.launch  r2d2.launch  r2d2_marker.launch
src/my_r2d2/urdf/: myhand.urdf  r2d2.urdf  r2d2.urdf.xacro  r2d2_xarco.urdf
src/planning_tutorial/: CMakeLists.txt  package.xml
src/planning_tutorial/launch/: sia5d.launch
src/planning_tutorial/src/: planning_tutorial.cpp  sia5d_moving.cpp
src/point_visualizer/: CMakeLists.txt  package.xml
src/point_visualizer/config/: rviz.rviz
src/point_visualizer/launch/: point_visualizer.launch  point_visualizer_mouse.launch
src/point_visualizer/src/: position_publisher.cpp  position_publisher_keyboard.cpp  position_publisher_mouse.cpp
